Fix ambiguity bug in union types for configurables